# Lumas

./: .env.template  .gitignore  DEVPOST_SUBMISSION.md  README.md  config.json  main.py  pyproject.toml  requirements.txt
android/: Architecture.md  README.md  local.properties  settings.gradle.kts  setup.ps1
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.html
android/app/src/main/java/com/lumas/app/: LlamaServer.kt  MainActivity.java  MainActivity.kt
android/app/src/main/jni/: llamaserver.cpp
android/app/src/main/res/values/: strings.xml  themes.xml
android/placeholder/com/lumas/runtime/: .gitkeep
android/placeholder/com/lumas/webview/: .gitkeep
lumas/: __init__.py  test_escape.py  test_full_demo.py
lumas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lumas/Lumas/: fix_test.py  gen_test.py  test_full_demo.py
lumas/backend/: config.py  main.py
lumas/backend/api/: routes.py
lumas/backend/engines/: base.py  local.py  manager.py  online.py
lumas/backend/models/: __init__.py  manager.py
lumas/backend/prompting/: builder.py
lumas/backend/retrieval/: chunker.py  embeddings.py  service.py
lumas/backend/services/: conversation.py  quiz.py
lumas/backend/storage/: database.py
lumas/frontend/android/: app.js  index.html  style.css
lumas/frontend/desktop/: index.html
lumas/frontend/desktop/static/: app.js  style.css
lumas/frontend/shared/: conversation.js  engine.js  index.js  prompting.js  quiz.js  retrieval.js  storage.js
lumas/lumas_data/: lumas.db
lumas/tests/: test_api.py  test_chunker.py  test_prompt_budget.py  test_retrieval.py  test_shared_js.js  test_storage.py
lumas_data/: lumas.db
