[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lumas"
version = "1.0.0"
description = "Lumas — On-Device AI Tutor"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.12",
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "sentence-transformers>=2.2.0",
    "pywebview>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["lumas*"]

[tool.pytest.ini_options]
testpaths = ["lumas/tests"]
